Regen from new swagger and address some API changes (#8772)
* Regenate code from new swagger and address autogen API changes